# agentmaster

./: .gitattributes  .gitignore  .ruff.toml  CODE_OF_CONDUCT.md  MIGRATION.md  Makefile  README.md  SECURITY.md  install-claude.sh  install-copilot.sh  install.py  pyproject.toml
.agentmaster/: SPEC.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 01-bug-report.yml  02-feature-request.yml  config.yml
.github/workflows/: quality.yml  release.yml
agentmaster/: __init__.py  __main__.py  cli.py  orchestration_cli.py  registry.py
agents/: code-analyst.md  explore.md  git-publisher.md  implementer.md  plan-critic.md  scout.md
copilot/: README.md
copilot/agents/: agentmaster-execute.agent.md  agentmaster-plan.agent.md  (+7 more)
criteria/: execute-orchestration-criteria.md  retro-criteria.md  review-criteria.md  writing-skills-criteria.md
evals/: evals.json
hooks/: copilot_telemetry_post.py  copilot_telemetry_pre.py  cost_boundary.py  dispatch-guard.sh  dispatch_guard.py  execute_stop.py  git-guard.sh  git_guard.py  hooklib.py  precompact-snapshot.sh  precompact_snapshot.py  session-context.sh  session_context.py  subagent-start.sh  subagent_start.py  telemetry.py  telemetry.sh
installer/: __init__.py  actions.py  agentmaster_config.py  capabilities.py  claude.py  claude_settings.py  config.py  copilot.py  frontmatter.py  ledger_bootstrap.py  managed_state.py  manifest.py  parity.py  plan_parser.py  render.py  runtime.py  skill_routing.py
ledger/: __init__.py  artifact_store.py  backup.py  budget_policy.py  cli.py  connection.py  context_pack.py  delivery.py  delivery_gate.py  entrypoint_seed.py  event_spool.py  evidence.py  evidence_sufficiency.py  feedback.py  feedback_capture.py  git_publisher.py  health.py  improvement_policy.py  ingestion.py  legacy_migration.py  memory_service.py  migrations.py  orchestrator_preflight.py  orchestrator_recovery.py  orchestrator_state.py  procedure_evaluation.py  queries.py  redaction.py  retrospective.py  review.py  review_gate.py  risk_routing.py  schema.py  transactions.py  worth.py
scripts/: code-quality.sh  log.sh  plan-structure-lint.sh  release_bundle.py  sync-criteria.sh  telemetry-report.sh  telemetry_report.py
tests/: conftest.py  test_actions.py  test_agentmaster_cli.py  test_agentmaster_config.py  test_artifact_store.py  test_budget_policy.py  test_claude_settings.py  test_claude_target.py  test_cli.py  test_command_registry.py  test_context_builder.py  test_copilot_target.py  test_cost_boundary.py  test_delivery_cli.py  test_delivery_gate.py  test_entrypoint_seed.py  test_evals.py  test_event_spool.py  test_evidence_ledger.py  test_evidence_sufficiency.py  test_execute_lifecycle.py  test_execute_stop_hook.py  test_feedback_capture.py  test_frontmatter.py  test_git_publisher.py  test_hook_ledger.py  test_hooklib.py  test_hooks.py  test_improvement_policy.py  test_install_plans.py  test_installed_runtime.py  test_ledger_backup.py  test_ledger_cli.py  test_ledger_connection.py  test_ledger_execution.py  test_ledger_feedback.py  test_ledger_health.py  test_ledger_ingestion_e2e.py  test_ledger_migrations.py  test_ledger_queries.py  (+31 more)
(+25 files in other folders)
