[project]
name = "agentmaster"
version = "1.1.1"
description = "On strong head with weaker hands"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = [
    "bashate>=2.1.1",
    "pytest>=8.3",
    "ruff>=0.15.22",
    "ty>=0.0.61",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = ["--strict-config", "--strict-markers", "-ra"]
xfail_strict = true
filterwarnings = ["error"]
markers = [
    "subprocess: spawns a local child process",
    "integration: crosses a CLI and installer/filesystem boundary",
    "sqlite: exercises a real SQLite database",
]
