[project]
name = "agentmaster"
version = "2.0.1"
description = "On strong head with weaker hands"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "bashate>=2.1.1",
    "pytest>=8.3",
    "ruff>=0.15.22",
    "ty>=0.0.61",
]

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B101", "B105", "B106", "B311", "B404", "B603", "B607", "B608"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = ["--strict-config", "--strict-markers", "-ra"]
xfail_strict = true
filterwarnings = ["error"]
markers = [
    "subprocess: spawns a local child process",
    "integration: crosses a CLI and installer/filesystem boundary",
    "sqlite: exercises a real SQLite database",
]
